--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-kapt'
 android {
     compileSdkVersion 28
 
@@ -22,7 +23,7 @@ android {
         }
     }
     dataBinding {
-        enabled = true
+        enabled  = true
     }
 
 }
@@ -44,6 +45,8 @@ dependencies {
     implementation 'com.squareup.okhttp3:logging-interceptor:3.12.1'
     implementation 'com.orhanobut:logger:2.1.1'
 
-//    implementation 'me.jessyan:autosize:1.2.1'
+    implementation 'me.jessyan:autosize:1.2.1'
 
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
 }
